Extract subTypes to AbstractType and use it consistently